--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
-                <div class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle">Event <span class="dropdown-arrow">▼</span></a>
-                    <div class="dropdown-menu">
-                        <a href="#about" class="dropdown-item">About</a>
-                        <a href="#partners" class="dropdown-item">Partners</a>
-                        <a href="#schedule" class="dropdown-item">Schedule</a>
-                        <a href="#speakers" class="dropdown-item">Speakers</a>
-                        <a href="#team" class="dropdown-item">Team</a>
-                        <a href="#venue" class="dropdown-item">Venue</a>
-                    </div>
-                </div>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#partners" class="nav-link">Partners</a>
+                <a href="#schedule" class="nav-link">Schedule</a>
+                <a href="#speakers" class="nav-link">Speakers</a>
+                <a href="#team" class="nav-link">Team</a>
+                <a href="#venue" class="nav-link">Venue</a>
                 <a href="#register" class="nav-link register-btn">Register</a>
             </div>
             <div class="hamburger">
@@ -170,18 +165,33 @@
                         <h3>Dr. Sarah Johnson</h3>
                         <p class="speaker-title">Quantum Research Scientist, IBM</p>
                         <p>Expert in quantum error correction and quantum algorithms with 10+ years of experience.</p>
+                        <a href="https://linkedin.com/in/sarahjohnson-quantum" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                     <div class="speaker-card">
                         <div class="speaker-image"></div>
                         <h3>Prof. Michael Chen</h3>
                         <p class="speaker-title">Director of Quantum Computing Lab</p>
                         <p>Leading researcher in quantum machine learning and quantum optimization.</p>
+                        <a href="https://linkedin.com/in/michaelchen-quantum" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                     <div class="speaker-card">
                         <div class="speaker-image"></div>
                         <h3>Alex Rodriguez</h3>
                         <p class="speaker-title">Qiskit Developer Advocate</p>
                         <p>Community leader and developer relations expert focusing on quantum education.</p>
+                        <a href="https://linkedin.com/in/alexrodriguez-qiskit" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -196,24 +206,44 @@
                         <h3>Emma Thompson</h3>
                         <p class="team-role">Event Director</p>
                         <p>Leading the overall organization and coordination of the event.</p>
+                        <a href="https://linkedin.com/in/emmathompson-events" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                     <div class="team-card">
                         <div class="team-image"></div>
                         <h3>David Kim</h3>
                         <p class="team-role">Technical Lead</p>
                         <p>Overseeing workshops and technical content development.</p>
+                        <a href="https://linkedin.com/in/davidkim-tech" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                     <div class="team-card">
                         <div class="team-image"></div>
                         <h3>Lisa Wang</h3>
                         <p class="team-role">Community Manager</p>
                         <p>Managing participant engagement and community building.</p>
+                        <a href="https://linkedin.com/in/lisawang-community" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                     <div class="team-card">
                         <div class="team-image"></div>
                         <h3>James Miller</h3>
                         <p class="team-role">Logistics Coordinator</p>
                         <p>Handling venue arrangements and event logistics.</p>
+                        <a href="https://linkedin.com/in/jamesmiller-logistics" target="_blank" class="linkedin-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
