added the map for the guc

--- a/index.html
+++ b/index.html
@@ -405,33 +405,29 @@
             </div>
         </section>
 
-        <section id="venue" class="section">
+        <section id="venue" class="section location-section">
             <div class="container">
-                <h2>Venue</h2>
-                <div class="venue-content">
-                    <div class="venue-info">
-                        <h3>Quantum Innovation Center</h3>
-                        <div class="venue-details">
-                            <div class="venue-detail">
-                                <strong>Address:</strong>
-                                <p>123 Quantum Drive<br>Innovation District<br>Tech City, TC 12345</p>
+                <h2 class="location-title">LOCATIONS</h2>
+                <div class="location-container">
+                    <div class="location-map-container">
+                        <div class="location-content">
+                            <div class="location-text">
+                                <h3 class="university-name">The German University in Cairo</h3>
+                                <div class="university-details">
+                                    <p>📍 New Cairo, Egypt</p>
+                                    <!-- <p>🏛️ Premier institution for quantum computing research</p>
+                                    <p>🚀 State-of-the-art facilities for hands-on learning</p>
+                                    <p>🌐 International collaboration hub</p> -->
+                                </div>
                             </div>
-                            <div class="venue-detail">
-                                <strong>Facilities:</strong>
-                                <ul>
-                                    <li>Modern auditorium with 300 seats</li>
-                                    <li>Breakout rooms for workshops</li>
-                                    <li>High-speed internet and computing facilities</li>
-                                    <li>Catering and networking spaces</li>
-                                    <li>Accessible parking and public transport</li>
-                                </ul>
+                            <div class="location-map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3455.742533239533!2d31.43877087658362!3d29.98682847495271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583cb2bfafbe73%3A0x6e7220116094726d!2sGerman%20University%20in%20Cairo%20(GUC)!5e0!3m2!1sen!2seg!4v1726385720561!5m2!1sen!2seg"
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer"
+                                    class="location-iframe square-map">
+                                </iframe>
                             </div>
-                        </div>
-                    </div>
-                    <div class="venue-map">
-                        <div class="map-placeholder">
-                            <p>Interactive Map</p>
-                            <p>📍 Quantum Innovation Center</p>
                         </div>
                     </div>
                 </div>
