added figary image and also the google form link

--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
                         </a>
                     </div>
                     <div class="speaker-card">
-                        <div class="speaker-image"></div>
+                        <div class="speaker-image">
+                            <img src="assets/figary.jpg" alt="Youssef Figary">
+                        </div>
                         <h3>Youssef Figary</h3>
                         <a href="https://www.linkedin.com/in/youssef-figary-00b630262/" target="_blank" class="linkedin-link">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
@@ -448,7 +450,7 @@
                 <h2>Join the Quantum Revolution</h2>
                 <p class="register-description">Ready to dive into the world of quantum computing? Register now for an unforgettable experience!</p>
                 <div class="register-button-container">
-                    <a href="https://forms.google.com/your-form-id" target="_blank" class="btn btn-register">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdjlKJS90M2YRSPB5RMMyextHy06Bw47u-VLsUqv7mJO72iCw/viewform?usp=header" target="_blank" class="btn btn-register">
                         Register Now
                         <span class="btn-icon">→</span>
                     </a>
