update of the schudele

--- a/index.html
+++ b/index.html
@@ -111,34 +111,62 @@
                                 <div class="schedule-day">
                                     <h3>Opening - November 8th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 5:30 PM</span>
+                                        <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Registration & Welcome</h4>
-                                            <p>Check-in, welcome breakfast, and opening ceremony</p>
+                                            <h4>Quantum Computing 101</h4>
+                                            <p>Prof. Ahmed Younis - Introduction to quantum computing fundamentals</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">6:00 - 7:30 PM</span>
+                                        <span class="time">6:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Computing Overview</h4>
-                                            <p>Introduction to quantum mechanics and quantum computing principles</p>
+                                            <h4>Previous Winners Showcase</h4>
+                                            <p>Past competition winners present their quantum projects</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">7:00 - 7:15 PM</span>
+                                        <div class="event-details">
+                                            <h4>Sponsor Presentation</h4>
+                                            <p>Special session with our event sponsors</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">7:15 - 8:15 PM</span>
+                                        <div class="event-details">
+                                            <h4>Quantum Computing Applications</h4>
+                                            <p>Prof. Gunzer - Real-world applications of quantum computing</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">8:15 - 8:45 PM</span>
+                                        <div class="event-details">
+                                            <h4>Interactive Quantum Activities</h4>
+                                            <p>Spin the Quantum, Kahoot, and Superposition reflex games</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">8:45 - 9:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Hackathon Announcement & Tool Demo</h4>
+                                            <p>Introduction to hackathon and educational tools demonstration</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="schedule-day">
-                                    <h3>Session 1 - November 10th</h3>
+                                    <h3>Session 1 - November 9th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
+                                        <span class="time">5:30 - 6:15 PM</span>
                                         <div class="event-details">
-                                            <h4>Qiskit Fundamentals Workshop</h4>
-                                            <p>Hands-on introduction to Qiskit programming and quantum circuits</p>
+                                            <h4>Intro to Qiskit Workshop</h4>
+                                            <p>Introduction to Qiskit, Google Colab, Gates, Circuits, and Quantum 101</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:30 - 9:30 PM</span>
+                                        <span class="time">6:15 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Algorithms Deep Dive</h4>
-                                            <p>Exploring Grover's and Shor's algorithms with practical implementations</p>
+                                            <h4>Quantum Superposition & Demo</h4>
+                                            <p>Anas Session - Website demo and practical quantum concepts</p>
                                         </div>
                                     </div>
                                 </div>
@@ -147,36 +175,19 @@
                             <!-- Slide 2: Session 2 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Session 2 - November 12th</h3>
+                                    <h3>Session 2 - November 11th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
+                                        <span class="time">5:30 - 6:45 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Machine Learning</h4>
-                                            <p>Introduction to QML algorithms and variational quantum circuits</p>
+                                            <h4>Quantum Entanglement</h4>
+                                            <p>Understanding quantum entanglement principles and applications</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:30 - 9:30 PM</span>
+                                        <span class="time">6:45 - 8:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Error Correction</h4>
-                                            <p>Understanding noise in quantum systems and mitigation strategies</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="schedule-day">
-                                    <h3>Session 2 - November 13th</h3>
-                                    <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
-                                        <div class="event-details">
-                                            <h4>Quantum Optimization</h4>
-                                            <p>QAOA and quantum optimization algorithms for real-world problems</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">7:30 - 9:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>Industry Applications Workshop</h4>
-                                            <p>Practical quantum computing applications in finance and logistics</p>
+                                            <h4>Superdense Coding & Teleportation</h4>
+                                            <p>Quantum communication protocols and quantum teleportation</p>
                                         </div>
                                     </div>
                                 </div>
@@ -185,19 +196,29 @@
                             <!-- Slide 3: Session 3 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Session 3 - November 15th</h3>
+                                    <h3>Session 3 - November 13th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
+                                        <span class="time">5:30 - 6:45 PM</span>
                                         <div class="event-details">
-                                            <h4>Advanced Quantum Circuits</h4>
-                                            <p>Building complex quantum circuits and optimization techniques</p>
+                                            <h4>Quantum Oracles</h4>
+                                            <p>Understanding quantum oracles and their role in quantum algorithms</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:30 - 9:30 PM</span>
+                                        <span class="time">6:45 - 8:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Networking</h4>
-                                            <p>Quantum communication protocols and distributed quantum computing</p>
+                                            <h4>Deutsch & Bernstein-Vazirani Algorithms</h4>
+                                            <p>Implementation and analysis of fundamental quantum algorithms</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="schedule-day">
+                                    <h3>Lab Tour - November 15th</h3>
+                                    <div class="schedule-item">
+                                        <span class="time">5:30 - 7:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Quantum Hardware Lab Tour</h4>
+                                            <p>Prof. Haytham Omran - How quantum hardware works (photonics)</p>
                                         </div>
                                     </div>
                                 </div>
@@ -206,43 +227,32 @@
                             <!-- Slide 4: Talks -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Talks - November 16th</h3>
+                                    <h3>Talks - November 16th (Sunday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 6:00 PM</span>
+                                        <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Keynote: Future of Quantum Computing</h4>
-                                            <p>Industry leaders share insights on quantum technology roadmap</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">6:30 - 7:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>Advanced Quantum Topics</h4>
-                                            <p>Deep dive into quantum machine learning, cyber security, and error correction</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">8:00 - 9:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>Panel Discussion</h4>
-                                            <p>Q&A with quantum computing experts and industry professionals</p>
+                                            <h4>Quantum Computing Industry Talks</h4>
+                                            <p>Industry experts share insights on quantum technology roadmap</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="schedule-day">
-                                    <h3>Talks - November 18th</h3>
+                                    <h3>Talks - November 17th (Monday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
+                                        <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Startup Showcase</h4>
-                                            <p>Quantum startups present their innovative solutions</p>
+                                            <h4>Advanced Quantum Research</h4>
+                                            <p>Research presentations on cutting-edge quantum developments</p>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="schedule-day">
+                                    <h3>Talks - November 18th (Tuesday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">7:30 - 9:30 PM</span>
+                                        <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Career in Quantum Computing</h4>
-                                            <p>Career paths and opportunities in the quantum industry</p>
+                                            <h4>Quantum Applications & Career Paths</h4>
+                                            <p>Career opportunities and real-world quantum applications</p>
                                         </div>
                                     </div>
                                 </div>
@@ -253,34 +263,34 @@
                                 <div class="schedule-day">
                                     <h3>Team Presentations - November 19th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 7:00 PM</span>
+                                        <span class="time">5:30 - 7:30 PM</span>
                                         <div class="event-details">
                                             <h4>Project Presentations</h4>
                                             <p>Teams present their quantum computing projects and solutions</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:30 - 9:00 PM</span>
+                                        <span class="time">7:30 - 8:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Judging & Awards</h4>
-                                            <p>Project evaluation and recognition of outstanding contributions</p>
+                                            <h4>IBM Speaker Session</h4>
+                                            <p>In-person IBM speaker presentation and judging evaluation</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="schedule-day">
                                     <h3>Closing - November 20th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:00 - 6:00 PM</span>
+                                        <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Closing Ceremony</h4>
-                                            <p>Final remarks, certificate distribution, and networking session</p>
+                                            <h4>IBM Quantum Ecosystem</h4>
+                                            <p>Virtual IBM speaker on quantum ecosystem and industry insights</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
                                         <span class="time">6:30 - 7:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Farewell Lunch</h4>
-                                            <p>Final networking opportunity and farewell</p>
+                                            <h4>Winners Announcement & Closing</h4>
+                                            <p>Results announcement, certificates, and farewell ceremony</p>
                                         </div>
                                     </div>
                                 </div>
